# odrey

./: .gitignore  README.md  odr.cmake  odr.py  odr_junit.py  test.sh
.github/workflows/: test.yml
test/: CMakeLists.txt  conftest.py  odr_test.py  test.py
test/application_and_shared/: CMakeLists.txt  app.cpp  lib.cpp  main.cpp
test/application_and_static/: CMakeLists.txt  app.cpp  lib.cpp  main.cpp
test/simple/: CMakeLists.txt  bar.cpp  foo.cpp
test/simple-inline/: CMakeLists.txt  bar.cpp  foo.cpp  main.cpp
